# BrokerTelegramBot

./: .gitattributes  BrokerTelegramBot.qrc  BrokerTelegramBot.rc  CMakeLists.txt  LICENSE  README.md  config.h.cmake  getversiontag-git  getversiontag-git.bat  getversiontag-svn  getversiontag-svn.bat
QtTelegramBot/: qttelegrambot.cpp
QtTelegramBot/types/: update.cpp
cmake/modules/: GetVersion.cmake
db/: README
db/backup/: BrokerTelegramBot_channel_signals_antonio.sqlite  BrokerTelegramBot_channel_signals_fds.sqlite
etc/: BrokerTelegramBot_default.cfg
inc/: app_broker_binary.h  app_configuration.h  app_database.h  app_model.h  app_model_history.h  app_model_proposals.h  app_priv.h  app_telegram_bot.h  broker_binary.h  configuration.h  telegram_bot.h
install/scripts/: cpBrokerTelegramBot.bat
python/: .gitignore  README  forward.py  forwarder.py  forwarder_runner.bat
resources/: icon.psd
src/: app_broker_binary.cpp  app_configuration.cpp  app_database.cpp  app_main.cpp  app_model.cpp  app_model_history.cpp  app_model_proposals.cpp  app_telegram_bot.cpp  broker_binary.cpp  configuration.cpp  main.cpp  telegram_bot.cpp
ui/: wdgcentral.ui  wdgmain.ui
